--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,10 @@ html {
   text-decoration: none;
 }
 
+body {
+  background-color: #000;
+}
+
 a {
   color: #333;
 }
@@ -416,26 +420,109 @@ p {
   #repos {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    margin: 0 2rem;
+    // margin: 2rem;
     padding: 2rem 0;
+    gap: 2rem;
 
-    div {
-      // width: 50px;
-      // height: 50px;
-      font-family: $font-paragraphs;
-      background-color: $color-blue;
-      padding: 25px;
-      font-size: 1.5rem;
-      border: 1px solid $color-white;
-      cursor: pointer;
+    .repo-card {
+      width: 300px;
+      height: 440px;
+      // min-height: calc(450px-25px);
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+      padding: 1rem;
+      margin: 0 1rem;
+      position: relative;
 
-      a {
-        color: $color-green;
+      h3 {
+        margin-bottom: 0.5rem;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-family: 'Raleway';
       }
+
+      img {
+        width: 90%;
+        margin-bottom: 1rem;
+        border-radius: 10px;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+      }
+
+
+      .tech-stack {
+        position: absolute;
+        bottom: 1rem;
+        left: 0.5rem;
+        display: flex;
+        flex-wrap: wrap;
+        font-family: 'Ubuntu', sans-serif;
+
+        span {
+          font-weight: 600;
+          margin: 0.2rem;
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+          padding: 0.5rem;
+          border-radius: 8px;
+
+        }
+
+        .v-js {
+          background: aquamarine;
+        }
+
+        .html5 {
+          background: lightgreen;
+        }
+
+        .css3 {
+          background: khaki;
+        }
+
+        .vue-js {
+          background: lightpink;
+        }
+
+        .svelte-js {
+          background: lavender;
+        }
+
+        .json-server {
+          background: darkcyan;
+          color: #fff;
+        }
+
+        .react-js {
+          background: magenta;
+          color: #fff;
+        }
+
+      }
+
+
+
     }
   }
+
+  //
+
+  //   div {
+  //     // width: 50px;
+  //     // height: 50px;
+  //     font-family: $font-paragraphs;
+  //     background-color: $color-blue;
+  //     padding: 25px;
+  //     font-size: 1.5rem;
+  //     border: 1px solid $color-white;
+  //     cursor: pointer;
+
+  //     a {
+  //       color: $color-green;
+  //     }
+  //   }
+  // }
 }
 
 //////////////////////////////////////////////
