--- a/css/style.scss
+++ b/css/style.scss
@@ -232,7 +232,7 @@ p {
     font-size: 4rem;
     color: $color-white;
     text-shadow: $text-shadow-dark;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
 
     span {
       color: $color-green;
@@ -278,6 +278,11 @@ p {
       }
     }
 
+    span {
+      font-weight: 700;
+      color: $color-green;
+    }
+
     &:hover {
       box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     }
@@ -316,13 +321,48 @@ p {
     font-size: 3.5rem;
     color: $color-white;
 
-    i {
-      transition: all 1s ease-in-out;
+
+
+    .icon {
+      transition: all 0.4s ease-in-out;
+      // position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .tooltiptext {
+        visibility: hidden;
+        width: fit-content;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 0.5rem;
+        font-size: 1rem;
+        font-family: 'Ubuntu', sans-serif;
+
+        /* Position the tooltip */
+        // position: absolute;
+        // z-index: 1;
+        // top: 70px;
+        // left: 0;
+        justify-content: center;
+        align-items: center;
+        // transform: translate(25%);
+        // margin-left: -60px;
+      }
+
     }
 
     i:hover {
       transform: scale(1.5);
+      color: $color-blue;
     }
+
+    .icon:hover .tooltiptext {
+      visibility: visible;
+    }
+
   }
 
   // Portfolio images of website screenshots
